# homework-pub-booking

./: .env.example  .mcp.json  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.claude/skills/rasa-building-flows/: SKILL.md
.claude/skills/rasa-building-skills/: SKILL.md
.claude/skills/rasa-calling-mcp-tools-from-flows/: SKILL.md
.claude/skills/rasa-configuring-assistant/: SKILL.md
.claude/skills/rasa-configuring-mcp-server/: SKILL.md
.claude/skills/rasa-configuring-model-groups/: SKILL.md
.claude/skills/rasa-managing-slots/: SKILL.md
.claude/skills/rasa-rephrasing-responses/: SKILL.md
.claude/skills/rasa-setting-up-a2a-agents/: SKILL.md
.claude/skills/rasa-setting-up-enterprise-search/: SKILL.md
.claude/skills/rasa-setting-up-react-agents/: SKILL.md
.claude/skills/rasa-writing-custom-actions/: SKILL.md
.claude/skills/rasa-writing-e2e-tests/: SKILL.md
.claude/skills/rasa-writing-responses/: SKILL.md
.rasa/: llms-full.txt  llms.txt  tools.yaml
answers/: ex5_loop_scenario.md  ex6_rasa_integration.md  ex7_handoff_bridge.md  ex8_voice_pipeline.md  ex9_reflection.md
docs/: real-mode-failures.md  speechmatics-setup.md
docs/superpowers/plans/: 2026-05-01-ex6-robust-rasa-half.md  2026-05-06-e2e-pipeline-runner.md  2026-05-06-research-agent-persona.md
docs/superpowers/specs/: 2026-05-01-ex6-robust-rasa-half-design.md  2026-05-06-e2e-pipeline-runner-design.md  2026-05-06-research-agent-persona-design.md
notes/: ex5-edinburgh-research-changes.md  ex6-rasa-structured-half-changes.md  ex7-handoff-bridge-changes.md
rasa_project/actions/: actions.py
rasa_project/data/: flows.yml
scripts/: educator_diagnostics.py  educator_validate.py  make_next.py  write_env_example.py
session_logs/examples/ex5-edinburgh-research/sess_2168538e584a/: SESSION.md  session.json
session_logs/examples/ex5-edinburgh-research/sess_3c28e30c4cd5/: SESSION.md  session.json
session_logs/examples/ex5-edinburgh-research/sess_51dfce6ae6c7/: SESSION.md  (+1 more)
starter/: _trace_stream.py
starter/edinburgh_research/: integrity.py  run.py  tools.py
starter/handoff_bridge/: bridge.py  run.py
starter/rasa_half/: run.py  structured_half.py  validator.py
starter/voice_pipeline/: README.md  manager_persona.py  requirements-voice.txt  run.py  run_e2e.py  voice_loop.py
tests/public/: test_bridge_zero_results.py  test_ex6_scaffold.py  test_ex8_e2e.py  test_trace_stream.py
(+438 files in other folders)
